--- a/index.html
+++ b/index.html
@@ -3,11 +3,57 @@
 
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+
   <link rel="stylesheet" href="css/main.css">
   <title>Raft | fintech </title>
 </head>
 
 <body>
+  <header class="header">
+    <nav class="navigation">
+      <div class="navigation__logo"><img src="asset/logo/logo-sm.png" alt="raft logo immage"></div>
+      <li class="navigation__nav">
+        <ul class="navigation__nav--links">
+          <li class="navigation__nav--link"><a href="#" class="btn btn-1">
+              solution</a></li>
+          <li class="navigation__nav--link">
+            <a href="#" class="btn btn-1">
+              learn</a>
+          </li>
+          <li class="navigation__nav--link"><a href="#" class="btn  btn-1">
+              about</a></li>
+        </ul>
+      </li>
+
+      <li class="navigation__nav">
+        <ul class="navigation__nav--actions">
+          <li class="navigation__nav--action"><a href="#" class="btn btn-1">login</a></li>
+
+          <li class="navigation__nav--action"><a href="#" class="btn-green btn">get started</a></li>
+        </ul>
+      </li>
+    </nav>
+
+    <div class="header__main">
+      <div class="header__main--text-box">
+
+        <h1 class="heading-primary">Building the future of banking.</h1>
+        <p class="heading-description">Experience the future of banking with RAFT. We're here to empower your financial
+          journey.</p>
+
+        <a href="#" class="btn-green btn">get started
+
+        </a>
+        <div class="backdrop"><img src="asset/img/Grid.png" alt="grid"></div>
+      </div>
+
+      <figure class="hero-image-box">
+        <img src="asset/img/hero-1.png" alt="two women laughing">
+      </figure>
+
+    </div>
+  </header>
 
 </body>
 
