hero section completed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+  <link rel="icon" href="asset/logo/import.png" type="x-icon">
 
   <link rel="stylesheet" href="css/main.css">
   <title>Raft | fintech </title>
@@ -37,12 +38,19 @@
 
     <div class="header__main">
       <div class="header__main--text-box">
-
+        <span class="intro-span">
+          <span>Introducing Raft Cards</span>
+          <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M13.5669 9.55806C13.811 9.80214 13.811 10.1979 13.5669 10.4419L7.31694 16.6919C7.07286 16.936 6.67714 16.936 6.43306 16.6919C6.18898 16.4479 6.18898 16.0521 6.43306 15.8081L12.2411 10L6.43306 4.19194C6.18898 3.94786 6.18898 3.55214 6.43306 3.30806C6.67714 3.06398 7.07286 3.06398 7.31694 3.30806L13.5669 9.55806Z"
+              fill="white" />
+          </svg>
+        </span>
         <h1 class="heading-primary">Building the future of banking.</h1>
         <p class="heading-description">Experience the future of banking with RAFT. We're here to empower your financial
           journey.</p>
 
-        <a href="#" class="btn-green btn">get started
+        <a href="#" class="btn-green btn btn-pad">get started
 
         </a>
         <div class="backdrop"><img src="asset/img/Grid.png" alt="grid"></div>
@@ -53,7 +61,40 @@
       </figure>
 
     </div>
+
+    <div class="featured ">
+      <p class="paragraph">Featured and seen in </p>
+      <div class="logos">
+        <figure class="logo">
+          <img src="asset/logo/Forbes_logo 1.png" alt="forbes logo">
+
+        </figure>
+        <figure class="logo">
+          <img src="asset/logo/cnbc-1.png" alt="CNBC logo">
+        </figure>
+        <figure class="logo">
+          <img src="asset/logo/bloomberg-1.png" alt="bloomberg logo image">
+        </figure>
+        <figure class="logo">
+          <img src="asset/logo/reuters-2-1 1.png" alt="">
+
+        </figure>
+        <figure class="logo">
+          <img src="asset/logo/cnn-logo 1.png" alt="CNN logo image">
+
+        </figure>
+
+
+      </div>
+    </div>
   </header>
+
+  <section class="section-learn">
+    <h2 class="heading-secondary">
+      Elevate Your Financial Journey with RAFT
+    </h2>
+    <p class="paragraph"></p>
+  </section>
 
 </body>
 
