--- a/index.html
+++ b/index.html
@@ -89,11 +89,61 @@
     </div>
   </header>
 
-  <section class="section-learn">
-    <h2 class="heading-secondary">
-      Elevate Your Financial Journey with RAFT
-    </h2>
-    <p class="paragraph"></p>
+  <section class="section__learn">
+    <div class="section__learn--text-box">
+      <h2 class="heading-secondary">
+        Elevate Your Financial Journey with RAFT
+      </h2>
+      <p class="paragraph">RAFT offers a world of financial possibilities. From investments to payments, we've got you
+        covered. Join us and unlock your financial potential today.</p>
+    </div>
+
+    <div class="grid__3--cols">
+      <div class="box span">
+        <figure class="composition">
+          <img src="asset/img/comp-1.png" alt="components">
+          <div class="overlay"></div>
+        </figure>
+        <div class="text-box">
+          <h3 class="heading-tertiary">Seamless Payments</h3>
+          <p class="small-text">Enjoy secure, seamless transactions that make managing your money a breeze.</p>
+        </div>
+      </div>
+      <div class="box ">
+        <figure class="composition">
+          <img src="asset/img/comp-2.png" alt="components">
+          <div class="overlay"></div>
+
+        </figure>
+
+        <div class="text-box">
+          <h3 class="heading-tertiary">Seamless Payments</h3>
+          <p class="small-text">Enjoy secure, seamless transactions that make managing your money a breeze.</p>
+        </div>
+      </div>
+      <div class="box ">
+        <figure class="composition">
+          <img src="asset/img/comp-3.png" alt="components">
+
+          <div class="overlay"></div>
+        </figure>
+        <div class="text-box">
+          <h3 class="heading-tertiary">Seamless Payments</h3>
+          <p class="small-text">Enjoy secure, seamless transactions that make managing your money a breeze.</p>
+        </div>
+      </div>
+      <div class="box span">
+        <figure class="composition">
+          <img src="asset/img/comp-4.png" alt="components">
+
+          <div class="overlay"></div>
+        </figure>
+        <div class="text-box">
+          <h3 class="heading-tertiary">Seamless Payments</h3>
+          <p class="small-text">Enjoy secure, seamless transactions that make managing your money a breeze.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
 </body>
