--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               fill="white" />
           </svg>
         </span>
-        <h1 class="heading-primary" data-aos="fade-up" data-aos-offset="100">Building the future of banking.</h1>
+        <h1 class="heading-primary" data-aos="fade-up" data-aos-offset="100">Building the future of <br> banking.</h1>
         <p class="heading-description" data-aos="fade-up" data-aos-offset="340">
           Experience the future of banking with RAFT. We're here to <br> empower
           your financial journey.
