sub-section green completed

--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
       </div>
     </div>
 
-    <div class="green">
+    <div class="green-box">
+      <div class="big-text">Smart investments, secure payments,
+        and expert guidance, all in one place.</div>
 
     </div>
   </section>
