--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   </header>
 
   <section class="section__learn">
-    <div class="section__learn--text-box">
+    <div class="section__text-box">
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         Elevate Your Financial Journey with RAFT
       </h2>
@@ -272,6 +272,63 @@
       <div class="big-text">Smart investments, secure payments,
         and expert guidance, all in one place.</div>
 
+    </div>
+  </section>
+
+  <section class="section__about container">
+    <div class="section__text-box">
+      <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        Confidently Shape Your Financial Future
+      </h2>
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="355">
+        At RAFT, we empower you to confidently shape your financial future.Our modern <br> approach simplifies saving
+        and
+        investing, making it easier than ever.
+      </p>
+    </div>
+
+    <div class="grid__2--cols">
+      <div class="box">
+        <div class="box-text-box">
+          <p class="heading-tertiary">
+            Spend better
+          </p>
+          <p class="paragraph">Set and achieve financial goals with ease, automate your savings, and watch your money
+            grow without the stress.</p>
+
+        </div>
+
+        <div class="img-box">
+
+          <figure class="composition">
+            <img src="asset/img/money-send.png" alt="money send logo">
+
+            <div class="backdrop"> <img src="asset/img/grid-2.png" alt=""></div>
+          </figure>
+
+        </div>
+      </div>
+
+
+      <div class="box">
+        <div class="box-text-box">
+          <p class="heading-tertiary">
+            Spend better
+          </p>
+          <p class="paragraph">Set and achieve financial goals with ease, automate your savings, and watch your money
+            grow without the stress.</p>
+
+        </div>
+        <div class="img-box">
+
+          <figure class="composition">
+            <img src="asset/img/wallet-minus.png" alt="money send logo">
+
+            <div class="backdrop"> <img src="asset/img/grid-2.png" alt=""></div>
+          </figure>
+
+        </div>
+      </div>
     </div>
   </section>
 </body>
