--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         Elevate Your Financial Journey with RAFT
       </h2>
-      <p class="paragraph" data-aos="fade-left" data-aos-offset="355">
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
         RAFT offers a world of financial possibilities. From investments to
         payments, we've got you covered. Join us and unlock your financial
         potential today.
@@ -187,7 +187,7 @@
 
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">your
         financial freedom your way</h2>
-      <p class="paragraph" data-aos="fade-left" data-aos-offset="355">
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
         We believe that managing your finances should be effortless and cost-effective. <br> That's why we offer you the
         freedom you deserve
       </p>
@@ -280,7 +280,7 @@
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         Confidently Shape Your Financial Future
       </h2>
-      <p class="paragraph" data-aos="fade-left" data-aos-offset="355">
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
         At RAFT, we empower you to confidently shape your financial future.Our modern <br> approach simplifies saving
         and
         investing, making it easier than ever.
@@ -359,6 +359,114 @@
       </div>
     </div>
   </section>
+  <section class="section-4">
+    <figure class="bg-img">
+      <img src="asset/img/hero-3.png" alt="">
+    </figure>
+    <div class="section__text-box">
+      <span class="description">Introducing</span>
+      <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        Introducing RAFT's Next-Gen Cards</h2>
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
+        Discover RAFT's latest innovation – our new cards. Elevate your banking <br> experience with cutting-edge
+        features,
+        security, and unprecedented <br> convenience.
+      </p>
+    </div>
+    <br>
+    <br>
+
+    <div class="img-box">
+      <figure class="composition">
+        <img src="asset/img/credit-card.png">
+      </figure>
+    </div>
+    <div class="card-about container">
+      <div class="grid__3--cols-sm">
+
+        <div class="box">
+          <div class="grid-text-box" data-aos="fade-up">
+            <div class=" grid-header">
+              <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M11 5C9.75736 5 8.75 6.00736 8.75 7.25C8.75 8.49264 9.75736 9.5 11 9.5C12.2426 9.5 13.25 8.49264 13.25 7.25C13.25 6.00736 12.2426 5 11 5Z"
+                  fill="white" />
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M0.5 2.375C0.5 1.33947 1.33947 0.5 2.375 0.5H19.625C20.6605 0.5 21.5 1.33947 21.5 2.375V12.125C21.5 13.1605 20.6605 14 19.625 14H2.375C1.33947 14 0.5 13.1605 0.5 12.125V2.375ZM7.25 7.25C7.25 5.17893 8.92893 3.5 11 3.5C13.0711 3.5 14.75 5.17893 14.75 7.25C14.75 9.32107 13.0711 11 11 11C8.92893 11 7.25 9.32107 7.25 7.25ZM17.75 6.5C17.3358 6.5 17 6.83579 17 7.25V7.2575C17 7.67171 17.3358 8.0075 17.75 8.0075H17.7575C18.1717 8.0075 18.5075 7.67171 18.5075 7.2575V7.25C18.5075 6.83579 18.1717 6.5 17.7575 6.5H17.75ZM3.5 7.25C3.5 6.83579 3.83579 6.5 4.25 6.5H4.2575C4.67171 6.5 5.0075 6.83579 5.0075 7.25V7.2575C5.0075 7.67171 4.67171 8.0075 4.2575 8.0075H4.25C3.83579 8.0075 3.5 7.67171 3.5 7.2575V7.25Z"
+                  fill="white" />
+                <path
+                  d="M1.25 15.5C0.835786 15.5 0.5 15.8358 0.5 16.25C0.5 16.6642 0.835786 17 1.25 17C6.65005 17 11.8802 17.7222 16.8498 19.0749C18.0404 19.399 19.25 18.5168 19.25 17.2551V16.25C19.25 15.8358 18.9142 15.5 18.5 15.5H1.25Z"
+                  fill="white" />
+              </svg>
+              <span class="description white"> No minimum balance fees</span>
+            </div>
+
+            <p class="small-text-sm">Say goodbye to minimum balance fees. Your account, your balance—no hidden charges
+            </p>
+          </div>
+        </div>
+
+
+        <div class="box">
+          <div class="grid-text-box" data-aos="fade-up" data-aos-delay="150">
+            <div class="grid-header">
+              <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M21 6.875C21 9.56739 16.9706 11.75 12 11.75C7.02944 11.75 3 9.56739 3 6.875C3 4.18261 7.02944 2 12 2C16.9706 2 21 4.18261 21 6.875Z"
+                  fill="white" />
+                <path
+                  d="M12 13.25C14.6852 13.25 17.1905 12.6637 19.0784 11.6411C19.7684 11.2673 20.4248 10.8043 20.9747 10.2567C20.9915 10.3783 21 10.5011 21 10.625C21 13.3174 16.9706 15.5 12 15.5C7.02944 15.5 3 13.3174 3 10.625C3 10.5011 3.00853 10.3783 3.02529 10.2567C3.57523 10.8043 4.23162 11.2673 4.92161 11.6411C6.80949 12.6637 9.31481 13.25 12 13.25Z"
+                  fill="white" />
+                <path
+                  d="M12 17C14.6852 17 17.1905 16.4137 19.0784 15.3911C19.7684 15.0173 20.4248 14.5543 20.9747 14.0067C20.9915 14.1283 21 14.2511 21 14.375C21 17.0674 16.9706 19.25 12 19.25C7.02944 19.25 3 17.0674 3 14.375C3 14.2511 3.00853 14.1283 3.02529 14.0067C3.57523 14.5543 4.23162 15.0173 4.92161 15.3911C6.80949 16.4137 9.31481 17 12 17Z"
+                  fill="white" />
+                <path
+                  d="M12 20.75C14.6852 20.75 17.1905 20.1637 19.0784 19.1411C19.7684 18.7673 20.4248 18.3043 20.9747 17.7567C20.9915 17.8783 21 18.0011 21 18.125C21 20.8174 16.9706 23 12 23C7.02944 23 3 20.8174 3 18.125C3 18.0011 3.00853 17.8783 3.02529 17.7567C3.57523 18.3043 4.23162 18.7673 4.92161 19.1411C6.80949 20.1637 9.31481 20.75 12 20.75Z"
+                  fill="white" />
+              </svg>
+              <span class="description  white"> No monthly fees</span>
+            </div>
+
+            <p class="small-text-sm">Bank with us without worrying about monthly fees. Keep more of your money where it
+              belongs—in your account</p>
+          </div>
+        </div>
+
+
+        <div class="box">
+          <div class="grid-text-box" data-aos="fade-up" data-aos-delay="250">
+            <div class="grid-header">
+              <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M13.9697 0.96967C14.2626 0.676777 14.7374 0.676777 15.0303 0.96967L19.5303 5.46967C19.671 5.61032 19.75 5.80109 19.75 6C19.75 6.19891 19.671 6.38968 19.5303 6.53033L15.0303 11.0303C14.7374 11.3232 14.2626 11.3232 13.9697 11.0303C13.6768 10.7374 13.6768 10.2626 13.9697 9.96967L17.1893 6.75L5.5 6.75C5.08579 6.75 4.75 6.41421 4.75 6C4.75 5.58579 5.08579 5.25 5.5 5.25L17.1893 5.25L13.9697 2.03033C13.6768 1.73744 13.6768 1.26256 13.9697 0.96967ZM6.03033 9.96967C6.32322 10.2626 6.32322 10.7374 6.03033 11.0303L2.81066 14.25H14.5C14.9142 14.25 15.25 14.5858 15.25 15C15.25 15.4142 14.9142 15.75 14.5 15.75H2.81066L6.03033 18.9697C6.32322 19.2626 6.32322 19.7374 6.03033 20.0303C5.73744 20.3232 5.26256 20.3232 4.96967 20.0303L0.46967 15.5303C0.176777 15.2374 0.176777 14.7626 0.46967 14.4697L4.96967 9.96967C5.26256 9.67678 5.73744 9.67678 6.03033 9.96967Z"
+                  fill="white" />
+              </svg>
+              <span class="description white">No bank transfer fees</span>
+            </div>
+
+            <p class="small-text-sm">Seamlessly transfer funds without the extra cost. Send and receive money with zero
+              bank
+              transfer fees.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="section__testimonial">
+    <div class="section__text-box">
+      <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        Elevate Your Financial Journey with RAFT
+      </h2>
+      <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
+        RAFT offers a world of financial possibilities. From investments to
+        payments, we've got you covered. Join us and unlock your financial
+        potential today.
+      </p>
+    </div>
+  </section>
+
 </body>
 
 
