--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
         <img src="asset/img/credit-card.png">
       </figure>
     </div>
-    <div class="grid__3--cols-sm">
+    <div class="grid__3--cols-sm container">
 
-      <div class="box container">
+      <div class="box ">
         <div class="grid-text-box" data-aos="fade-up">
           <div class=" grid-header">
             <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -462,44 +462,138 @@
 
     </div>
 
-    <div class="grid__3--cols-sm">
+    <div class="grid__3--cols-bg">
 
 
       <div class="box">
         <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
-          <p class="description">
-            RAFT has transformed my approach to finance. Their smart investing options have helped me grow my wealth,
-            and their user-friendly platform makes managing my money a breeze. I've never felt more confident about my
-            financial future.
-          </p>
+          <div class="text-box">
+            <p class=" para">
+              RAFT has transformed my approach to finance. Their smart investing options have helped me grow my wealth,
+              and their user-friendly platform makes managing my money a breeze. I've never felt more confident about my
+              financial future.
+            </p>
 
-          <div class="testimonials__profile"></div>
+          </div>
+          <div class="testimonials__profile">
+            <div class="name">
+              <p class="description"> <b> Robert Fox</b></p>
+              <span class="sm-text">Happy RAFT User</span>
+            </div>
+            <figure>
+              <img src="asset/img/frame 136.png">
+            </figure>
+          </div>
         </div>
       </div>
 
 
       <div class="box">
-        <div class="grid-text-box" data-aos="fade-right" data-aos-delay="350">
-          <p class="description">
-            I can't express how grateful I am to RAFT. Their wealth management services have been a game-changer for my
-            family's financial security. The expert guidance and personalized strategies have given us peace of mind,
-            knowing that our future is in capable hands.
-          </p>
+        <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
+          <div class="text-box">
+            <p class=" para">
+              RAFT has transformed my approach to finance. Their smart investing options have helped me grow my wealth,
+              and their user-friendly platform makes managing my money a breeze. I've never felt more confident about my
+              financial future.
+            </p>
+
+          </div>
+          <div class="testimonials__profile">
+            <div class="name">
+              <p class="description"> <b> Robert Fox</b></p>
+              <span class="sm-text">Happy RAFT User</span>
+            </div>
+            <figure>
+              <img src="asset/img/frame 136.png">
+            </figure>
+          </div>
         </div>
       </div>
 
 
       <div class="box">
-        <div class="grid-text-box" data-aos="fade-right" data-aos-delay="450">
-          <p class="description">
-            RAFT's financial planning services have been a lifeline for me. I always struggled with managing my money,
-            but their team crafted a tailored plan that addressed my goals and concerns. It's been a game-changer in
-            achieving my financial dreams
-          </p>
+        <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
+          <div class="text-box">
+            <p class=" para">
+              RAFT has transformed my approach to finance. Their smart investing options have helped me grow my wealth,
+              and their user-friendly platform makes managing my money a breeze. I've never felt more confident about my
+              financial future.
+            </p>
+
+          </div>
+          <div class="testimonials__profile">
+            <div class="name">
+              <p class="description"> <b> Robert Fox</b></p>
+              <span class="sm-text">Happy RAFT User</span>
+            </div>
+            <figure>
+              <img src="asset/img/frame 136.png">
+            </figure>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="button">
+      <a href="#" class="arrow" data-aos="zoom-in-up">
+        <img src="asset/svg/heroicons-outline/arrow-small-left.svg" alt="arr">
+      </a>
+      <a href="#" class="arrow" data-aos="zoom-in-up">
+        <img src="asset/svg/heroicons-outline/arrow-small-right.svg" alt="arr">
+      </a>
+
+    </div>
   </section>
+
+  <section class="section-FAQ container">
+    <div class="section__text-box" data-aos="fade-left">
+      <h2 class="heading-secondary al" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+        frequently asked <br> questions
+      </h2>
+    </div>
+    <div class="FAQ">
+      <div class="FAQ__box">
+        <p class="description">How do I create an account with RAFT?</p>
+        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12.5303 16.7803C12.2374 17.0732 11.7626 17.0732 11.4697 16.7803L3.96967 9.28033C3.67678 8.98744 3.67678 8.51256 3.96967 8.21967C4.26256 7.92678 4.73744 7.92678 5.03033 8.21967L12 15.1893L18.9697 8.21967C19.2626 7.92678 19.7374 7.92678 20.0303 8.21967C20.3232 8.51256 20.3232 8.98744 20.0303 9.28033L12.5303 16.7803Z"
+            fill="white" />
+        </svg>
+      </div>
+      <div class="FAQ__box">
+        <p class="description">How does RAFT ensure the security of my financial data?</p>
+        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12.5303 16.7803C12.2374 17.0732 11.7626 17.0732 11.4697 16.7803L3.96967 9.28033C3.67678 8.98744 3.67678 8.51256 3.96967 8.21967C4.26256 7.92678 4.73744 7.92678 5.03033 8.21967L12 15.1893L18.9697 8.21967C19.2626 7.92678 19.7374 7.92678 20.0303 8.21967C20.3232 8.51256 20.3232 8.98744 20.0303 9.28033L12.5303 16.7803Z"
+            fill="white" />
+        </svg>
+      </div>
+      <div class="FAQ__box">
+        <p class="description">What types of transactions can I perform with RAFT?</p>
+        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12.5303 16.7803C12.2374 17.0732 11.7626 17.0732 11.4697 16.7803L3.96967 9.28033C3.67678 8.98744 3.67678 8.51256 3.96967 8.21967C4.26256 7.92678 4.73744 7.92678 5.03033 8.21967L12 15.1893L18.9697 8.21967C19.2626 7.92678 19.7374 7.92678 20.0303 8.21967C20.3232 8.51256 20.3232 8.98744 20.0303 9.28033L12.5303 16.7803Z"
+            fill="white" />
+        </svg>
+      </div>
+      <div class="FAQ__box">
+        <p class="description">What benefits does RAFT offer for wealth management?</p>
+        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12.5303 16.7803C12.2374 17.0732 11.7626 17.0732 11.4697 16.7803L3.96967 9.28033C3.67678 8.98744 3.67678 8.51256 3.96967 8.21967C4.26256 7.92678 4.73744 7.92678 5.03033 8.21967L12 15.1893L18.9697 8.21967C19.2626 7.92678 19.7374 7.92678 20.0303 8.21967C20.3232 8.51256 20.3232 8.98744 20.0303 9.28033L12.5303 16.7803Z"
+            fill="white" />
+        </svg>
+      </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__logo">
+      <figure class="footer__logo--img">
+        <img src="asset/logo/logo-bg.png" alt="bigger logo img">
+      </figure>
+    </div>
+  </footer>
 
 </body>
 
