overall layout completed

--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         Introducing RAFT's Next-Gen Cards</h2>
       <p class="paragraph" data-aos="fade-left" data-aos-offset="320">
-        Discover RAFT's latest innovation – our new cards. Elevate your banking <br> experience with cutting-edge
+        Discover RAFT's latest innovation – our new cards. Elevate your banking experience with cutting-edge
         features,
-        security, and unprecedented <br> convenience.
+        security, and unprecedented convenience.
       </p>
     </div>
     <br>
@@ -481,14 +481,14 @@
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/frame 136.png">
+              <img src="asset/img/frame 127.png">
             </figure>
           </div>
         </div>
       </div>
 
 
-      <div class="box">
+      <div class="box" id="box-1">
         <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
           <div class="text-box">
             <p class=" para">
@@ -500,18 +500,18 @@
           </div>
           <div class="testimonials__profile">
             <div class="name">
-              <p class="description"> <b> Robert Fox</b></p>
+              <p class="description"> <b> Cameron Williamson</b></p>
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/frame 136.png">
+              <img src="asset/img/Frame 130.png">
             </figure>
           </div>
         </div>
       </div>
 
 
-      <div class="box">
+      <div class="box" id="box-2">
         <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
           <div class="text-box">
             <p class=" para">
@@ -523,7 +523,7 @@
           </div>
           <div class="testimonials__profile">
             <div class="name">
-              <p class="description"> <b> Robert Fox</b></p>
+              <p class="description"> <b> Esther Howard</b></p>
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
@@ -535,10 +535,10 @@
     </div>
 
     <div class="button">
-      <a href="#" class="arrow" data-aos="zoom-in-up">
+      <a href="#box-1" class="arrow" data-aos="zoom-in-up">
         <img src="asset/svg/heroicons-outline/arrow-small-left.svg" alt="arr">
       </a>
-      <a href="#" class="arrow" data-aos="zoom-in-up">
+      <a href="#box-2" class="arrow" data-aos="zoom-in-up">
         <img src="asset/svg/heroicons-outline/arrow-small-right.svg" alt="arr">
       </a>
 
@@ -587,11 +587,84 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer class="footer container">
     <div class="footer__logo">
-      <figure class="footer__logo--img">
+      <figure class="footer__logo--img" data-aos="fade-up" data-aos-duration="500"
+        data-aos-anchor-placement="bottom-bottom" data-aos-delay="500">
         <img src="asset/logo/logo-bg.png" alt="bigger logo img">
       </figure>
+    </div>
+
+    <div class="footer__main">
+      <div class="footer__main--content">
+        <div class="qr-code" data-aos-duration="500" data-aos="flip-right">
+          <figure class="composition">
+            <img src="asset/img/qr-code.png" alt="">
+          </figure>
+
+          <div class="text-box">
+            <p class="paragraph">
+              Scan to download App on the <br>
+              Playstore and Appstore.
+            </p>
+            <div class="text-box__logos">
+              <figure class="text-box__logos--logo">
+                <img src="asset/svg/ion_logo-google-playstore.svg" alt="play store logo">
+              </figure>
+              <figure class="text-box__logos--logo">
+                <img src="asset/svg/ic_baseline-apple.svg" alt="apple logo">
+              </figure>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__main--info">
+
+          <div class=" box" data-aos="fade-up" data-aos-duration=300" data-aos-anchor-placement="bottom-bottom"
+            data-aos-delay="300">
+            <p class="box--header paragraph">
+              <b> about us</b>
+            </p>
+            <p class="paragraph">Our company</p>
+            <p class="paragraph">Careers</p>
+            <p class="paragraph">Press kits</p>
+          </div>
+
+          <div class=" box" data-aos="fade-up" data-aos-duration=300" data-aos-anchor-placement="bottom-bottom"
+            data-aos-delay="450">
+            <p class="box--header paragraph">
+              <b> Legal</b>
+            </p>
+            <p class="paragraph">Terms of use</p>
+            <p class="paragraph">Privacy policy</p>
+            <p class="paragraph">About us</p>
+          </div>
+
+          <div class=" box" data-aos="fade-up" data-aos-duration=300" data-aos-anchor-placement="bottom-bottom"
+            data-aos-delay="550">
+            <p class="box--header paragraph">
+              <b> Support</b>
+            </p>
+            <p class="paragraph">Contact us</p>
+            <p class="paragraph">FAQ</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__footer">
+      <div class="country" data-aos="fade-right" data-aos-offset="50" data-aos-delay="550">
+        <p class="footer-text">English (United Kingdom)
+        </p>
+        <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M12.5303 16.7803C12.2374 17.0732 11.7626 17.0732 11.4697 16.7803L3.96967 9.28033C3.67678 8.98744 3.67678 8.51256 3.96967 8.21967C4.26256 7.92678 4.73744 7.92678 5.03033 8.21967L12 15.1893L18.9697 8.21967C19.2626 7.92678 19.7374 7.92678 20.0303 8.21967C20.3232 8.51256 20.3232 8.98744 20.0303 9.28033L12.5303 16.7803Z"
+            fill="white" />
+        </svg>
+      </div>
+      <small class="footer-small" data-aos="fade-left" data-aos-offset="50" data-aos-delay="550"> &copy; &MediumSpace;
+        Raft Corp,
+        LLC.</small>
     </div>
   </footer>
 
