--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       <div class="navigation__logo">
         <img src="asset/logo/logo-sm.png" alt="raft logo immage" />
       </div>
+
+
+      <input type="checkbox" id="navigation__button" class="navigation__input" />
+      <label for="navigation__button" class="navigation__button">
+        <span class="navigation__button--icon"></span>
+      </label>
+
       <li class="navigation__nav">
         <ul class="navigation__nav--links">
           <li class="navigation__nav--link">
@@ -29,10 +36,9 @@
             <a href="#" class="btn btn-1"> about</a>
           </li>
         </ul>
-      </li>
 
-      <li class="navigation__nav">
         <ul class="navigation__nav--actions">
+
           <li class="navigation__nav--action">
             <a href="#" class="btn btn-1">login</a>
           </li>
@@ -42,7 +48,10 @@
           </li>
         </ul>
       </li>
+
+
     </nav>
+    <div class="navigation__backdrop"></div>
 
     <div class="header__main">
       <div class="header__main--text-box">
