--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <li class="navigation__nav">
         <ul class="navigation__nav--links">
           <li class="navigation__nav--link">
-            <a href="#" class="btn btn-1"> solution</a>
+            <a href="#solution" class="btn btn-1"> solution</a>
           </li>
           <li class="navigation__nav--link">
-            <a href="#" class="btn btn-1"> learn</a>
+            <a href="#more" class="btn btn-1"> learn</a>
           </li>
           <li class="navigation__nav--link">
-            <a href="#" class="btn btn-1"> about</a>
+            <a href="#faq" class="btn btn-1"> about</a>
           </li>
         </ul>
 
@@ -43,15 +43,15 @@
             <a href="#" class="btn btn-1">login</a>
           </li>
 
-          <li class="navigation__nav--action">
-            <a href="#" class="btn-green btn">get started</a>
+          <li class="navigation__nav--action" data-aos="fade-left">
+            <a href="#footer" class="btn-green btn">get started</a>
           </li>
         </ul>
       </li>
 
 
+      <div class="navigation__backdrop"></div>
     </nav>
-    <div class="navigation__backdrop"></div>
 
     <div class="header__main">
       <div class="header__main--text-box">
@@ -191,7 +191,7 @@
     </div>
   </section>
 
-  <section class="section__more">
+  <section class="section__more" id="more">
     <div class="section__text-box">
 
       <h2 class="heading-secondary" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">your
@@ -211,7 +211,7 @@
     <div class="grid__3--cols-sm container">
 
 
-      <div class="box">
+      <div class="box  box-1">
         <div class="grid-text-box" data-aos="fade-up">
           <div class=" grid-header">
             <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -368,7 +368,7 @@
       </div>
     </div>
   </section>
-  <section class="section-4">
+  <section class="section-4" id="solution">
     <figure class="bg-img" "zoom-in-up">
       <img src="asset/img/hero-3.png" alt="">
     </figure>
@@ -463,7 +463,7 @@
 
   </section>
 
-  <section class="section__testimonial    ">
+  <section class="section__testimonial    " id="faq">
     <div class="section__text-box">
       <h2 class="heading-secondary" data-aos="fade-down" data-aos-offset="300" data-aos-easing="ease-in-sine">
         join over 300 <br> members
@@ -497,7 +497,7 @@
       </div>
 
 
-      <div class="box" id="box-1">
+      <div class="box">
         <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
           <div class="text-box">
             <p class=" para">
@@ -509,18 +509,17 @@
           </div>
           <div class="testimonials__profile">
             <div class="name">
-              <p class="description"> <b> Cameron Williamson</b></p>
+              <p class="description"> <b> Robert Fox</b></p>
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/Frame 130.png">
+              <img src="asset/img/frame 127.png">
             </figure>
           </div>
         </div>
       </div>
 
-
-      <div class="box" id="box-2">
+      <div class="box box-none">
         <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
           <div class="text-box">
             <p class=" para">
@@ -532,16 +531,40 @@
           </div>
           <div class="testimonials__profile">
             <div class="name">
-              <p class="description"> <b> Esther Howard</b></p>
+              <p class="description"> <b> Robert Fox</b></p>
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/frame 136.png">
+              <img src="asset/img/frame 127.png">
             </figure>
           </div>
         </div>
       </div>
     </div>
+    <div class="grid">
+      <div class="box">
+        <div class="grid-text-box" data-aos="fade-right" data-aos-delay="250">
+          <div class="text-box">
+            <p class=" para">
+              RAFT has transformed my approach to finance. Their smart investing options have helped me grow my wealth,
+              and their user-friendly platform makes managing my money a breeze. I've never felt more confident about my
+              financial future.
+            </p>
+
+          </div>
+          <div class="testimonials__profile">
+            <div class="name">
+              <p class="description"> <b> Robert Fox</b></p>
+              <span class="sm-text">Happy RAFT User</span>
+            </div>
+            <figure>
+              <img src="asset/img/frame 127.png">
+            </figure>
+          </div>
+        </div>
+      </div>+
+    </div>
+
 
     <div class="button">
       <a href="#box-1" class="arrow" data-aos="zoom-in-up">
@@ -661,7 +684,7 @@
         </div>
       </div>
     </div>
-    <div class="footer__footer">
+    <div class="footer__footer" id="footer">
       <div class="country" data-aos="fade-right" data-aos-offset="50" data-aos-delay="550">
         <p class="footer-text">English (United Kingdom)
         </p>
