--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/frame 127.png">
+              <img src="asset/img/Frame 130.png">
             </figure>
           </div>
         </div>
@@ -558,7 +558,7 @@
               <span class="sm-text">Happy RAFT User</span>
             </div>
             <figure>
-              <img src="asset/img/frame 127.png">
+              <img src="asset/img/Frame 136.png">
             </figure>
           </div>
         </div>
